[gd_scene load_steps=5 format=3 uid="uid://drwcc1ckjp7v8"]

[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_2kb0v"]
[ext_resource type="PackedScene" uid="uid://msuv7ika18tw" path="res://scenes/laser/laser.tscn" id="1_w0omh"]
[ext_resource type="PackedScene" uid="uid://bupc6qpfkyeec" path="res://scenes/pipe/pipe.tscn" id="2_3ggs7"]
[ext_resource type="AudioStream" uid="uid://b8xqy2ukr3wti" path="res://assets/audio/score.wav" id="4_rxdod"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_2kb0v")

[node name="laser" parent="." instance=ExtResource("1_w0omh")]

[node name="Upper" parent="." instance=ExtResource("2_3ggs7")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_3ggs7")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(75, -2)
scale = Vector2(1.775, 1.8)

[node name="scoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rxdod")

[connection signal="body_exited" from="laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
